Added inverted excluded to included.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,9 @@
         "noImplicitAny": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
-    }
+    },
+    "include": [
+        "src",
+        "test"
+    ]
 }
