Removed yarn. Renamed pay to throttle. Ensure npm version is 5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js:
   - "node"
   - "7"
   - "6"
-cache: yarn
+before_install: if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
 after_success: npm run coverage
