--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
   - "node"
+  - "8"
   - "7"
   - "6"
-before_install: if [[ `npm -v` != 5* ]]; then npm i -g npm@5; fi
+before_install: npm install -g npm@latest
 after_success: npm run coverage
